Added the Linux Foundation course and certificate.

--- a/index.html
+++ b/index.html
@@ -19,26 +19,40 @@
     <link href='img/favicon.ico' rel='shortcut icon' type='image/x-icon'/>
 
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" rel="stylesheet" />
+    <link crossorigin="anonymous"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+          integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" rel="stylesheet"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha512-rO2SXEKBSICa/AfyhEK5ZqWFCOok1rcgPYfGOqtX35OyiraBg6Xa4NnBJwXgpIRoXeWjcAmcQniMhp22htDc6g==" crossorigin="anonymous" rel="stylesheet" />
+    <link crossorigin="anonymous"
+          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha512-rO2SXEKBSICa/AfyhEK5ZqWFCOok1rcgPYfGOqtX35OyiraBg6Xa4NnBJwXgpIRoXeWjcAmcQniMhp22htDc6g==" rel="stylesheet"/>
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" integrity="sha512-RO38pBRxYH3SoOprtPTD86JFOclM51/XTIdEPh5j8sj4tp8jmQIx26twG52UaLi//hQldfrh7e51WzP9wuP32Q==" crossorigin="anonymous" rel="stylesheet" />
+    <link crossorigin="anonymous"
+          href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css"
+          integrity="sha512-RO38pBRxYH3SoOprtPTD86JFOclM51/XTIdEPh5j8sj4tp8jmQIx26twG52UaLi//hQldfrh7e51WzP9wuP32Q==" rel="stylesheet"/>
     <!-- Audio Player -->
     <link href="css/AetherPlayer.css" rel="stylesheet">
     <!-- Custom styles -->
     <link href="css/style.css" rel="stylesheet">
 
     <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous" type="text/javascript"></script>
+    <script crossorigin="anonymous"
+            integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
     <!-- Bootstrap tooltips -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js" integrity="sha512-dGKwxQCqSidr/LgPBYjZoJRGzWaw5aC/5oCHgWPQ4PGql/hUhg5qamih+hZeyunBzQU5l1Ra3zUPdMpgFi3NuQ==" crossorigin="anonymous" type="text/javascript"></script>
+    <script crossorigin="anonymous"
+            integrity="sha512-dGKwxQCqSidr/LgPBYjZoJRGzWaw5aC/5oCHgWPQ4PGql/hUhg5qamih+hZeyunBzQU5l1Ra3zUPdMpgFi3NuQ=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js" type="text/javascript"></script>
     <!-- Bootstrap core JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha512-I5TkutApDjnWuX+smLIPZNhw+LhTd8WrQhdCKsxCFRSvhFx2km8ZfEpNIhF9nq04msHhOkE8BMOBj5QE07yhMA==" crossorigin="anonymous" type="text/javascript"></script>
+    <script crossorigin="anonymous"
+            integrity="sha512-I5TkutApDjnWuX+smLIPZNhw+LhTd8WrQhdCKsxCFRSvhFx2km8ZfEpNIhF9nq04msHhOkE8BMOBj5QE07yhMA=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- MDB core JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js" integrity="sha512-Mug9KHKmroQFMLm93zGrjhibM2z2Obg9l6qFG2qKjXEXkMp/VDkI4uju9m4QKPjWSwQ6O2qzZEnJDEeCw0Blcw==" crossorigin="anonymous" type="text/javascript"></script>
+    <script crossorigin="anonymous"
+            integrity="sha512-Mug9KHKmroQFMLm93zGrjhibM2z2Obg9l6qFG2qKjXEXkMp/VDkI4uju9m4QKPjWSwQ6O2qzZEnJDEeCw0Blcw=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js" type="text/javascript"></script>
     <!-- Bowser -->
     <script src="js/bowser.js" type="text/javascript"></script>
     <!-- Audio Player -->
@@ -672,6 +686,23 @@
                 </div>
                 <!--Grid column-->
 
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-4 mb-4">
+
+                    <a href="pdf/certificates/LinuxFundation-LFD103.pdf" rel="noopener noreferrer" target="_blank">
+                        <span aria-hidden="true" class="fas fa-certificate fa-5x orange-text"></span>
+                    </a>
+
+                    <h4 class="my-4 font-weight-bold">
+                        <a href="https://training.linuxfoundation.org/training/a-beginners-guide-to-linux-kernel-development-lfd103/"
+                           rel="noopener noreferrer" target="_blank">
+                            <strong>A Beginner’s Guide to Linux Kernel Development (LFD103)</strong>
+                        </a>
+                    </h4>
+
+                </div>
+                <!--Grid column-->
+
             </div>
             <!--Grid row-->
         </section>
@@ -812,9 +843,37 @@
                     </dl>
                     <dd>
                         Graduation certificate ID: <a href="https://www.udemy.com/certificate/UC-f78eff91-7d6b-4383-80ab-aaee2b13ce9a/"
-                                                      rel="noopener noreferrer" target="_blank"> UC-f78eff91-7d6b-4383-80ab-aaee2b13ce9a</a>
+                                                      rel="noopener noreferrer" target="_blank">UC-f78eff91-7d6b-4383-80ab-aaee2b13ce9a</a>
                     </dd>
 
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-4 mb-4">
+
+                    <span aria-hidden="true" class="fas fa-book-open fa-5x orange-text"></span>
+
+                    <h4 class="my-4 font-weight-bold">
+                        <a href="https://training.linuxfoundation.org/training/a-beginners-guide-to-linux-kernel-development-lfd103/"
+                           rel="noopener noreferrer" target="_blank">
+                            <strong>A Beginner’s Guide to Linux Kernel Development (LFD103)</strong>
+                        </a>
+                    </h4>
+
+                    <dl>
+                        <dt>
+                            Instructor: <a href="https://www.linkedin.com/in/shuah-khan-9527a414/"
+                                           rel="noopener noreferrer" target="_blank">Shuah Khan</a>
+                        </dt>
+                    </dl>
+                    <dd>
+                        Certificate ID number: LF-gwugk5gw9g
+                    </dd>
+                    <dd>
+                        Credly badge verification: <a href="https://www.credly.com/badges/2d5eaa09-6539-4f7a-967b-934b62a4eecf"
+                                                      rel="noopener noreferrer" target="_blank">2d5eaa09-6539-4f7a-967b-934b62a4eecf</a>
+                    </dd>
                 </div>
                 <!--Grid column-->
 
